--- a/DacrsUI/DacrsUI.vcxproj.filters
+++ b/DacrsUI/DacrsUI.vcxproj.filters
@@ -223,6 +223,9 @@
     <ClCompile Include="Reminderdlg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="BetInformation.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BmpBtn.h">
@@ -502,6 +505,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Reminderdlg.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="BetInformation.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
