1.关闭设置写到配置文件当中 2.显示赌约池和红包池去交易的hash的钱六位
Signed-off-by: bess <776536184@qq.com>

--- a/bin/dacrsclient.conf
+++ b/bin/dacrsclient.conf
@@ -1,110 +1,122 @@
 {
-	"mainconfig":{  
-        "startserver":true,
-		"server_config_name":"dacrs.conf",
-		"chinese":0
-    },
-	"netparam":{
-		"server_ip":"127.0.0.1",
-		"rpc_port":"17523",
-		"server_ui_port":"2361",
-		"rpc_user":"smartcoin",
-		"rpc_password":"admin"
-	},
-	"logcfg":{
-		"log_flag":1,
-		"tags":[
-				{
-				"debug":"INFO"
-				}
-			   ],
-		"print_fileline":1,
-		"print_timestamps":1
-	},
-	"script":{  
-    "betscript":"26812-1",
-	"darkscript":"3-1",
-	"iposcript":"1-1",
-	"redpacketscript":"52799-1"
-    },
-	"darkcoin": {
-		"SendBuyernFee":33670,
-		"SendSellernFee":38606,
-		"SendBuyerConfirednFee":53571,
-		"SendBuyerCancelnFee":43571
-	},
-	"p2pbet": {
-	"SendBetFee":63806,
-	"AcceptBetnFee":89407,
-	"OpenBetnFee":84457,
-	"GetAppAmountnFee":84457,
-	"GetRechangeFee":32587
-	},
-	"redpacket": {
-	"sendredcommFee":1800000,
-	"acceptredcommFee":290000,
-	"sendredspecalFee":480000,
-	"acceptredspecalFee":960000
-	},
-	"rpccommand": {
-	"getinfo":"getinfo",
-	"help":"help",
-	"stop":"stop",
-	"getnetworkinfo":"getnetworkinfo",
-	"addnode":"addnode",
-	"getaddednodeinfo":"getaddednodeinfo",
-	"getconnectioncount":"getconnectioncount",
-	"getnettotals":"getnettotals",
-	"getpeerinfo":"getpeerinfo",
-	"ping":"ping",
-	"getblockchaininfo":"getblockchaininfo",
-	"getbestblockhash":"getbestblockhash",
-	"getblockcount":"getblockcount",
-	"getblock":"getblock",
-	"getblockhash":"getblockhash",
-	"getdifficulty":"getdifficulty",
-	"getrawmempool":"getrawmempool",
-	"verifychain":"verifychain",
-	"getmininginfo":"getmininginfo",
-	"getnetworkhashps":"getnetworkhashps",
-	"submitblock":"submitblock",
-	"verifymessage":"verifymessage",
-	"backupwallet":"backupwallet",
-	"dumpprivkey":"dumpprivkey",
-	"dumpwallet":"dumpwallet",
-	"encryptwallet":"encryptwallet",
-	"getaccountinfo":"getaccountinfo",
-	"getnewaddress":"getnewaddress",
-	"gettxdetail":"gettxdetail",
-	"listunconfirmedtx":"listunconfirmedtx",
-	"getwalletinfo":"getwalletinfo",
-	"importprivkey":"importprivkey",
-	"prepareforcoolmining":"prepareforcoolmining",
-	"importwallet":"importwallet",
-	"listaddr":"listaddr",
-	"listtx":"listtx",
-	"registaccounttx":"registaccounttx",
-	"createcontracttx":"createcontracttx",
-	"registerapptx":"registerapptx",
-	"settxfee":"settxfee",
-	"walletlock":"walletlock",
-	"walletpassphrasechange":"walletpassphrasechange",
-	"walletpassphrase":"walletpassphrase",
-	"setgenerate":"setgenerate",
-	"listapp":"listapp",
-	"generateblock":"generateblock",
-	"listtxcache":"listtxcache",
-	"getscriptdata":"getscriptdata",
-	"signmessage":"signmessage",
-	"sendtoaddress":"sendtoaddress",
-	"sendtoaddresswithfee":"sendtoaddresswithfee",
-	"getbalance":"getbalance",
-	"sendtoaddressraw":"sendtoaddressraw",
-	"submittx":"submittx",
-	"createcontracttxraw":"createcontracttxraw",
-	"registerscripttxraw":"registerscripttxraw",
-	"sigstr":"sigstr",
-	"getappaccinfo":"getappaccinfo",
-	"getappkeyvalue":"getappkeyvalue"
-	}
+   "closeconf" : {
+      "colse" : 2
+   },
+   "darkcoin" : {
+      "SendBuyerCancelnFee" : 43571,
+      "SendBuyerConfirednFee" : 53571,
+      "SendBuyernFee" : 33670,
+      "SendSellernFee" : 38606
+   },
+   "logcfg" : {
+      "log_flag" : 1,
+      "print_fileline" : 1,
+      "print_timestamps" : 1,
+      "tags" : [
+         {
+            "debug" : "INFO"
+         },
+         {
+            "debug" : "PROCESSMSG"
+         },
+         {
+            "debug" : "RECIVEUI"
+         },
+         {
+            "debug" : "CProgStatusBar"
+         }
+      ]
+   },
+   "mainconfig" : {
+      "chinese" : 0,
+      "server_config_name" : "dacrs.conf",
+      "startserver" : true
+   },
+   "netparam" : {
+      "rpc_password" : "admin",
+      "rpc_port" : "18332",
+      "rpc_user" : "smartcoin",
+      "server_ip" : "127.0.0.1",
+      "server_ui_port" : "12345"
+   },
+   "p2pbet" : {
+      "AcceptBetnFee" : 89407,
+      "GetAppAmountnFee" : 84457,
+      "GetRechangeFee" : 32587,
+      "OpenBetnFee" : 84457,
+      "SendBetFee" : 63806
+   },
+   "redpacket" : {
+      "acceptredcommFee" : 290000,
+      "acceptredspecalFee" : 960000,
+      "sendredcommFee" : 1800000,
+      "sendredspecalFee" : 480000
+   },
+   "rpccommand" : {
+      "addnode" : "addnode",
+      "backupwallet" : "backupwallet",
+      "createcontracttx" : "createcontracttx",
+      "createcontracttxraw" : "createcontracttxraw",
+      "dumpprivkey" : "dumpprivkey",
+      "dumpwallet" : "dumpwallet",
+      "encryptwallet" : "encryptwallet",
+      "generateblock" : "generateblock",
+      "getaccountinfo" : "getaccountinfo",
+      "getaddednodeinfo" : "getaddednodeinfo",
+      "getappaccinfo" : "getappaccinfo",
+      "getappkeyvalue" : "getappkeyvalue",
+      "getbalance" : "getbalance",
+      "getbestblockhash" : "getbestblockhash",
+      "getblock" : "getblock",
+      "getblockchaininfo" : "getblockchaininfo",
+      "getblockcount" : "getblockcount",
+      "getblockhash" : "getblockhash",
+      "getconnectioncount" : "getconnectioncount",
+      "getdifficulty" : "getdifficulty",
+      "getinfo" : "getinfo",
+      "getmininginfo" : "getmininginfo",
+      "getnettotals" : "getnettotals",
+      "getnetworkhashps" : "getnetworkhashps",
+      "getnetworkinfo" : "getnetworkinfo",
+      "getnewaddress" : "getnewaddress",
+      "getpeerinfo" : "getpeerinfo",
+      "getrawmempool" : "getrawmempool",
+      "getscriptdata" : "getscriptdata",
+      "gettxdetail" : "gettxdetail",
+      "getwalletinfo" : "getwalletinfo",
+      "help" : "help",
+      "importprivkey" : "importprivkey",
+      "importwallet" : "importwallet",
+      "listaddr" : "listaddr",
+      "listapp" : "listapp",
+      "listtx" : "listtx",
+      "listtxcache" : "listtxcache",
+      "listunconfirmedtx" : "listunconfirmedtx",
+      "ping" : "ping",
+      "prepareforcoolmining" : "prepareforcoolmining",
+      "registaccounttx" : "registaccounttx",
+      "registerapptx" : "registerapptx",
+      "registerscripttxraw" : "registerscripttxraw",
+      "sendtoaddress" : "sendtoaddress",
+      "sendtoaddressraw" : "sendtoaddressraw",
+      "sendtoaddresswithfee" : "sendtoaddresswithfee",
+      "setgenerate" : "setgenerate",
+      "settxfee" : "settxfee",
+      "signmessage" : "signmessage",
+      "sigstr" : "sigstr",
+      "stop" : "stop",
+      "submitblock" : "submitblock",
+      "submittx" : "submittx",
+      "verifychain" : "verifychain",
+      "verifymessage" : "verifymessage",
+      "walletlock" : "walletlock",
+      "walletpassphrase" : "walletpassphrase",
+      "walletpassphrasechange" : "walletpassphrasechange"
+   },
+   "script" : {
+      "betscript" : "223-1",
+      "darkscript" : "3-1",
+      "iposcript" : "1-1",
+      "redpacketscript" : "298-1"
+   }
 }
