--- a/DacrsUI/DacrsUI.vcxproj.filters
+++ b/DacrsUI/DacrsUI.vcxproj.filters
@@ -226,6 +226,9 @@
     <ClCompile Include="BetInformation.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="SetAppId.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BmpBtn.h">
@@ -508,6 +511,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="BetInformation.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="SetAppId.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
