--- a/DacrsUI/DacrsUI.vcxproj.filters
+++ b/DacrsUI/DacrsUI.vcxproj.filters
@@ -229,6 +229,9 @@
     <ClCompile Include="SetAppId.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="MessageBoxEx.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BmpBtn.h">
@@ -514,6 +517,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="SetAppId.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="MessageBoxEx.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
