1.修改应用提示语句放的位置
Former-commit-id: 22532359f46f47e16a4c33c17c1da30b1adf0cef

--- a/bin/dacrsclient.conf
+++ b/bin/dacrsclient.conf
@@ -24,6 +24,9 @@
          },
          {
             "debug" : "CProgStatusBar"
+         },
+         {
+            "debug" : "OPENBET"
          }
       ]
    },
@@ -39,6 +42,11 @@
       "server_ip" : "127.0.0.1",
       "server_ui_port" : "12345"
    },
+   "newestscript" : {
+      "betscript" : "29283-1",
+      "iposcript" : "10-1",
+      "redpacketscript" : "29282-1"
+   },
    "p2pbet" : {
       "AcceptBetnFee" : 89407,
       "GetAppAmountnFee" : 84457,
@@ -47,7 +55,7 @@
       "SendBetFee" : 63806
    },
    "redpacket" : {
-      "acceptredcommFee" : 290000,
+      "acceptredcommFee" : 180000,
       "acceptredspecalFee" : 960000,
       "sendredcommFee" : 1800000,
       "sendredspecalFee" : 480000
@@ -114,9 +122,9 @@
       "walletpassphrasechange" : "walletpassphrasechange"
    },
    "script" : {
-      "betscript" : "223-1",
+      "betscript" : "29283-1",
       "darkscript" : "3-1",
-      "iposcript" : "1-1",
-      "redpacketscript" : "298-1"
+      "iposcript" : "10-1",
+      "redpacketscript" : "29282-1"
    }
 }
