1.添加异常出错时会答应出错的堆栈信息。 2.在主页添加客服qq。
Signed-off-by: bess <776536184@qq.com>

--- a/DacrsUI/DacrsUI.vcxproj.filters
+++ b/DacrsUI/DacrsUI.vcxproj.filters
@@ -232,6 +232,9 @@
     <ClCompile Include="BalloonTip.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="msjexhnd.cpp">
+      <Filter>头文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BmpBtn.h">
@@ -521,6 +524,9 @@
     </ClInclude>
     <ClInclude Include="BalloonTip.h">
       <Filter>源文件</Filter>
+    </ClInclude>
+    <ClInclude Include="msjexhnd.h">
+      <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
