--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -82,6 +82,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;_WINDOWS;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AssemblerOutput>All</AssemblerOutput>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -90,6 +91,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>..\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <OutputFile>..\bin\DacrsUI.exe</OutputFile>
+      <GenerateMapFile>true</GenerateMapFile>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
@@ -284,6 +286,7 @@
     <ClInclude Include="GuessNum.h" />
     <ClInclude Include="IpoCoin.h" />
     <ClInclude Include="Log.h" />
+    <ClInclude Include="msjexhnd.h" />
     <ClInclude Include="NewMenu.h" />
     <ClInclude Include="NewSendAddr.h" />
     <ClInclude Include="Out.h" />
@@ -390,6 +393,10 @@
     <ClCompile Include="Log.cpp" />
     <ClCompile Include="MainDlg.cpp" />
     <ClCompile Include="MortgageTardDlg.cpp" />
+    <ClCompile Include="msjexhnd.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="MyMutex.cpp" />
     <ClCompile Include="MyQueue.cpp" />
     <ClCompile Include="NewAddressDlg.cpp" />
