--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -135,6 +135,9 @@
     <None Include="res\bother_1.bmp" />
     <None Include="res\bother_2.bmp" />
     <None Include="res\bother_3.bmp" />
+    <None Include="res\btn1.bmp" />
+    <None Include="res\btn2.bmp" />
+    <None Include="res\btn3.bmp" />
     <None Include="res\button_bar.bmp" />
     <None Include="res\button_bar_3.bmp" />
     <None Include="res\button_black_ground.bmp" />
@@ -187,6 +190,7 @@
     <None Include="res\main_log_3.bmp" />
     <None Include="res\main_log_4.bmp" />
     <None Include="res\main_ui_background.bmp" />
+    <None Include="res\message.bmp" />
     <None Include="res\min1.bmp" />
     <None Include="res\min2.bmp" />
     <None Include="res\min3.bmp" />
@@ -213,6 +217,7 @@
     <None Include="res\progress3.bmp" />
     <None Include="res\progress4.bmp" />
     <None Include="res\Receive.bmp" />
+    <None Include="res\red.bmp" />
     <None Include="res\redpacket_type.bmp" />
     <None Include="res\red_fresh.bmp" />
     <None Include="res\red_long_button .bmp" />
@@ -286,6 +291,7 @@
     <ClInclude Include="GuessNum.h" />
     <ClInclude Include="IpoCoin.h" />
     <ClInclude Include="Log.h" />
+    <ClInclude Include="MessageBoxEx.h" />
     <ClInclude Include="msjexhnd.h" />
     <ClInclude Include="NewMenu.h" />
     <ClInclude Include="NewSendAddr.h" />
@@ -392,6 +398,7 @@
     <ClCompile Include="ListCtrlCl.cpp" />
     <ClCompile Include="Log.cpp" />
     <ClCompile Include="MainDlg.cpp" />
+    <ClCompile Include="MessageBoxEx.cpp" />
     <ClCompile Include="MortgageTardDlg.cpp" />
     <ClCompile Include="msjexhnd.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
