--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -151,6 +151,7 @@
     <None Include="res\close2.bmp" />
     <None Include="res\close3.bmp" />
     <None Include="res\CLOSE_BUTTON.BMP" />
+    <None Include="res\contentbk.bmp" />
     <None Include="res\copy_addr_1.bmp" />
     <None Include="res\copy_addr_2.bmp" />
     <None Include="res\copy_addr_3.bmp" />
@@ -248,6 +249,7 @@
     <None Include="res\sister_3.bmp" />
     <None Include="res\target.bmp" />
     <None Include="res\Tip.bmp" />
+    <None Include="res\title.bmp" />
     <None Include="res\tradedetail_logo_1.bmp" />
     <None Include="res\tradedetail_logo_2.bmp" />
     <None Include="res\tradedetail_logo_3.bmp" />
@@ -285,6 +287,7 @@
     <ClInclude Include="CWorkbooks.h" />
     <ClInclude Include="CWorksheet.h" />
     <ClInclude Include="CWorksheets.h" />
+    <ClInclude Include="DialogBase.h" />
     <ClInclude Include="EncryptWallet.h" />
     <ClInclude Include="GrabCommRedPacket.h" />
     <ClInclude Include="GrabSpecalRedPacket.h" />
@@ -381,6 +384,7 @@
     <ClCompile Include="DacrsUI.cpp" />
     <ClCompile Include="DacrsUIDB.cpp" />
     <ClCompile Include="DacrsUIDlg.cpp" />
+    <ClCompile Include="DialogBase.cpp" />
     <ClCompile Include="EncryptWallet.cpp" />
     <ClCompile Include="GIFControl.cpp" />
     <ClCompile Include="GrabCommRedPacket.cpp" />
