--- a/bin/dacrs.conf
+++ b/bin/dacrs.conf
@@ -3,11 +3,11 @@ rpcpassword=admin
 blockminsize=1000
 debug=ERROR
 #debug=vm
-debug=NOUI
-debug=TOUI
+#debug=NOUI
+#debug=TOUI
 debug=INFO
 #debug=net
-debug=sendtx
+#debug=sendtx
 printtoconsole=0
 logtimestamps=1
 logprintfofile=1
@@ -18,7 +18,10 @@ rpcport=18332
 uiport=12345
 appid=29283-1
 appid=29282-1
+appid=223-1
+appid=298-1
 gen=1
 genproclimit=1000000
+logmaxsize=100
 
 
