--- a/package/DacrsUI_Main/UI/dacrs_ui_new/bin/dacrs.conf
+++ b/package/DacrsUI_Main/UI/dacrs_ui_new/bin/dacrs.conf
@@ -3,9 +3,11 @@ rpcpassword=admin
 blockminsize=1000
 debug=ERROR
 #debug=vm
-#debug=NOUI
+debug=NOUI
+debug=TOUI
 #debug=INFO
 #debug=net
+debug=sendtx
 printtoconsole=0
 logtimestamps=1
 logprintfofile=1
