--- a/package/DacrsUI_Main/UI/dacrs_ui_new/bin/qupdater.ini
+++ b/package/DacrsUI_Main/UI/dacrs_ui_new/bin/qupdater.ini
@@ -4,7 +4,7 @@ QuickCheck=false
 Langage=qupdatercn.lan
 CheckLostFile=true
 [UPDATEINFO]
-ListURL=http://www.dacrs.com/dacrs_ui/qupdater.xml
+ListURL=http://www.dacrs.com/updata/qupdater.xml
 [APPLICATION]
 Application=DacrsUI.exe
 Name=QUpdater DacrsUI
