1.修改获取更新pool函数，已经rpc命令
Signed-off-by: bess <776536184@qq.com>

Former-commit-id: 010aa6ba3801fdb79475b06f6da8dab39eafe293

--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -90,7 +90,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>..\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <OutputFile>..\bin\DacrsUI.exe</OutputFile>
+      <OutputFile>C:\dacrs_main_net_rc\DacrsUI.exe</OutputFile>
       <GenerateMapFile>true</GenerateMapFile>
     </Link>
     <Midl>
