--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -90,7 +90,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>..\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <OutputFile>C:\dacrs_main_net_rc\DacrsUI.exe</OutputFile>
+      <OutputFile>..\bin\DacrsUI.exe</OutputFile>
       <GenerateMapFile>true</GenerateMapFile>
     </Link>
     <Midl>
