1.修改写日志接口增加最大文件限制 2.修改调用RPC命令，判断接收数据字节不对，打印日志。
Former-commit-id: 354f1826a71a129b7f72a260ef42a2da9054d2c5

--- a/bin/dacrsclient.conf
+++ b/bin/dacrsclient.conf
@@ -1,6 +1,6 @@
 {
    "closeconf" : {
-      "colse" : 1
+      "colse" : 2
    },
    "darkcoin" : {
       "SendBuyerCancelnFee" : 43571,
@@ -12,7 +12,8 @@
       "log_flag" : 1,
       "print_fileline" : 1,
       "print_timestamps" : 1,
-      "tags" : [
+	  "max_size" : 100,
+	  "tags" : [
          {
             "debug" : "INFO"
          }
