1.提交的版本号1.0.2.2
Signed-off-by: bess <776536184@qq.com>

Former-commit-id: b21913ac3523512839562afed72c55288f2d00b4

--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -256,6 +256,8 @@
     <None Include="res\tradedetail_logo_2.bmp" />
     <None Include="res\tradedetail_logo_3.bmp" />
     <None Include="res\tradedetail_logo_4.bmp" />
+    <None Include="res\trade_next.bmp" />
+    <None Include="res\trade__up.bmp" />
     <None Include="res\Trad_dlg.bmp" />
     <None Include="res\unlock.bmp" />
     <None Include="res\wallet_uipro.bmp" />
