--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -117,16 +117,22 @@
     <None Include="res\address_book.bmp" />
     <None Include="res\addr_book_black_ground.bmp" />
     <None Include="res\add_app_1.bmp" />
+    <None Include="res\add_app_1en.bmp" />
     <None Include="res\add_app_2.bmp" />
+    <None Include="res\add_app_2en.bmp" />
     <None Include="res\add_app_3.bmp" />
+    <None Include="res\add_app_3en.bmp" />
     <None Include="res\add_app_4.bmp" />
     <None Include="res\alltrade1.bmp" />
+    <None Include="res\alltrade1en.bmp" />
     <None Include="res\bak_wallet.bmp" />
     <None Include="res\bet_record.bmp" />
+    <None Include="res\bet_recorden.bmp" />
     <None Include="res\bitmap1.bmp" />
     <None Include="res\bitmap11.bmp" />
     <None Include="res\bitmap13.bmp" />
     <None Include="res\bitmap14.bmp" />
+    <None Include="res\bitmap15.bmp" />
     <None Include="res\bitmap4.bmp" />
     <None Include="res\Bitmap_begin.bmp" />
     <None Include="res\Bitmap_end.bmp" />
@@ -168,15 +174,22 @@
     <None Include="res\exit_bj.bmp" />
     <None Include="res\grab_bt.bmp" />
     <None Include="res\grab_red_packet.bmp" />
+    <None Include="res\grab_red_packeten.bmp" />
     <None Include="res\grab_rp_log.bmp" />
     <None Include="res\grab_rp_log_2.bmp" />
+    <None Include="res\grab_rp_log_2_en.bmp" />
     <None Include="res\grab_rp_log_3.bmp" />
+    <None Include="res\grab_rp_log_3_en.bmp" />
+    <None Include="res\grab_rp_log_en.bmp" />
     <None Include="res\green_long_button.bmp" />
     <None Include="res\import_wallet.bmp" />
     <None Include="res\IPO.bmp" />
     <None Include="res\ipo_1.bmp" />
+    <None Include="res\ipo_1en.bmp" />
     <None Include="res\ipo_2.bmp" />
+    <None Include="res\ipo_2en.bmp" />
     <None Include="res\ipo_3.bmp" />
+    <None Include="res\ipo_3en.bmp" />
     <None Include="res\ipo_4.bmp" />
     <None Include="res\ipo_app_1.bmp" />
     <None Include="res\ipo_app_2.bmp" />
@@ -184,14 +197,19 @@
     <None Include="res\kuang.bmp" />
     <None Include="res\lock.bmp" />
     <None Include="res\Logo.bmp" />
+    <None Include="res\Logo_En.bmp" />
     <None Include="res\MainUI.bmp" />
     <None Include="res\MainUI_1.bmp" />
     <None Include="res\MainUI_2.bmp" />
     <None Include="res\main_log_1.bmp" />
+    <None Include="res\main_log_1en.bmp" />
     <None Include="res\main_log_2.bmp" />
+    <None Include="res\main_log_2en.bmp" />
     <None Include="res\main_log_3.bmp" />
+    <None Include="res\main_log_3en.bmp" />
     <None Include="res\main_log_4.bmp" />
     <None Include="res\main_ui_background.bmp" />
+    <None Include="res\main_ui_backgrounden.bmp" />
     <None Include="res\message.bmp" />
     <None Include="res\min1.bmp" />
     <None Include="res\min2.bmp" />
@@ -210,14 +228,20 @@
     <None Include="res\p2p_button_2.bmp" />
     <None Include="res\p2p_button_3.bmp" />
     <None Include="res\p2p_dlg.bmp" />
+    <None Include="res\p2p_dlgen.bmp" />
     <None Include="res\p2p_list.bmp" />
     <None Include="res\p2p_list_box_but.bmp" />
     <None Include="res\p2p_red_packet.bmp" />
+    <None Include="res\p2p_red_packeten.bmp" />
     <None Include="res\profit_bakgrd.bmp" />
     <None Include="res\progress1.bmp" />
+    <None Include="res\progress1_EN.bmp" />
     <None Include="res\progress2.bmp" />
+    <None Include="res\progress2_EN.bmp" />
     <None Include="res\progress3.bmp" />
+    <None Include="res\progress3_EN.bmp" />
     <None Include="res\progress4.bmp" />
+    <None Include="res\progress4_EN.bmp" />
     <None Include="res\Receive.bmp" />
     <None Include="res\red.bmp" />
     <None Include="res\redpacket_type.bmp" />
@@ -226,21 +250,31 @@
     <None Include="res\red_long_button.bmp" />
     <None Include="res\red_packet_draw.bmp" />
     <None Include="res\red_packet_pool.bmp" />
+    <None Include="res\red_packet_poolen.bmp" />
     <None Include="res\red_recharge.bmp" />
     <None Include="res\rev_logo_1.bmp" />
+    <None Include="res\rev_logo_1en.bmp" />
     <None Include="res\rev_logo_2.bmp" />
+    <None Include="res\rev_logo_2en.bmp" />
     <None Include="res\rev_logo_3.bmp" />
+    <None Include="res\rev_logo_3en.bmp" />
     <None Include="res\rev_logo_4.bmp" />
     <None Include="res\rp_next.bmp" />
     <None Include="res\rp_up.bmp" />
     <None Include="res\Send.bmp" />
     <None Include="res\send_bet_record.bmp" />
+    <None Include="res\send_bet_recorden.bmp" />
     <None Include="res\send_logo_1.bmp" />
+    <None Include="res\send_logo_1en.bmp" />
     <None Include="res\send_logo_2.bmp" />
+    <None Include="res\send_logo_2en.bmp" />
     <None Include="res\send_logo_3.bmp" />
+    <None Include="res\send_logo_3en.bmp" />
     <None Include="res\send_logo_4.bmp" />
     <None Include="res\send_red_packet.bmp" />
+    <None Include="res\send_red_packeten.bmp" />
     <None Include="res\send_ui_blackgruond.bmp" />
+    <None Include="res\send_ui_blackgruonden.bmp" />
     <None Include="res\sig_0.bmp" />
     <None Include="res\sig_1.bmp" />
     <None Include="res\sig_2.bmp" />
@@ -253,21 +287,28 @@
     <None Include="res\tip_icon.bmp" />
     <None Include="res\title.bmp" />
     <None Include="res\tradedetail_logo_1.bmp" />
+    <None Include="res\tradedetail_logo_1en.bmp" />
     <None Include="res\tradedetail_logo_2.bmp" />
+    <None Include="res\tradedetail_logo_2en.bmp" />
     <None Include="res\tradedetail_logo_3.bmp" />
+    <None Include="res\tradedetail_logo_3en.bmp" />
     <None Include="res\tradedetail_logo_4.bmp" />
     <None Include="res\trade_next.bmp" />
     <None Include="res\trade__up.bmp" />
     <None Include="res\Trad_dlg.bmp" />
     <None Include="res\unlock.bmp" />
     <None Include="res\wallet_uipro.bmp" />
+    <None Include="res\wallet_uiproen.bmp" />
     <None Include="res\warning_icon.bmp" />
     <None Include="res\wndtitlebk.bmp" />
     <None Include="res\xh_2.bmp" />
     <None Include="res\xh_3.bmp" />
     <None Include="res\your_sister_1.bmp" />
+    <None Include="res\your_sister_1en .bmp" />
     <None Include="res\your_sister_2.bmp" />
+    <None Include="res\your_sister_2en.bmp" />
     <None Include="res\your_sister_3.bmp" />
+    <None Include="res\your_sister_3en .bmp" />
     <None Include="res\your_sister_4.bmp" />
   </ItemGroup>
   <ItemGroup>
