--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -335,6 +335,8 @@
     <ClInclude Include="CWorksheet.h" />
     <ClInclude Include="CWorksheets.h" />
     <ClInclude Include="DialogBase.h" />
+    <ClInclude Include="DlgDocument.h" />
+    <ClInclude Include="DlgView.h" />
     <ClInclude Include="EncryptWallet.h" />
     <ClInclude Include="GrabCommRedPacket.h" />
     <ClInclude Include="GrabSpecalRedPacket.h" />
@@ -412,6 +414,8 @@
     <ClInclude Include="TradDlg.h" />
     <ClInclude Include="UiHead.h" />
     <ClInclude Include="Z:\dacrs_release\dacrs\src\tinyformat.h" />
+    <ClInclude Include="zip\unzip.h" />
+    <ClInclude Include="zip\zip.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AcceptRedPacketRecord.cpp" />
@@ -433,6 +437,8 @@
     <ClCompile Include="DacrsUIDB.cpp" />
     <ClCompile Include="DacrsUIDlg.cpp" />
     <ClCompile Include="DialogBase.cpp" />
+    <ClCompile Include="DlgDocument.cpp" />
+    <ClCompile Include="DlgView.cpp" />
     <ClCompile Include="EncryptWallet.cpp" />
     <ClCompile Include="GIFControl.cpp" />
     <ClCompile Include="GrabCommRedPacket.cpp" />
@@ -501,6 +507,12 @@
     <ClCompile Include="UseListBox.cpp" />
     <ClCompile Include="WalletPassPhrase.cpp" />
     <ClCompile Include="XProgressCtrl.cpp" />
+    <ClCompile Include="zip\unzip.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="zip\zip.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="DacrsUI.rc" />
