1.修改菜单栏中的翻译，一样关于菜单栏中画勾
Signed-off-by: bess <776536184@qq.com>

Former-commit-id: 37b205a4344422513d9c6b8a56175f25bf106d8e

--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -327,6 +327,7 @@
     <ClInclude Include="CFont0.h" />
     <ClInclude Include="ChangeDPI.h" />
     <ClInclude Include="ChangPassWord.h" />
+    <ClInclude Include="ChoseLanguage.h" />
     <ClInclude Include="CommonAddr.h" />
     <ClInclude Include="CommonStruct.h" />
     <ClInclude Include="CRange.h" />
@@ -431,6 +432,7 @@
     <ClCompile Include="CeXDib.cpp" />
     <ClCompile Include="ChangeDPI.cpp" />
     <ClCompile Include="ChangPassWord.cpp" />
+    <ClCompile Include="ChoseLanguage.cpp" />
     <ClCompile Include="CommonAddr.cpp" />
     <ClCompile Include="CommonStruct.cpp" />
     <ClCompile Include="DacrsUI.cpp" />
