1.修改json文件中文乱码的bug。 2.修改ipo领币改成应用余额界面的修改。
Signed-off-by: bess <776536184@qq.com>

--- a/bin/dacrsclient.conf
+++ b/bin/dacrsclient.conf
@@ -1,6 +1,7 @@
 {
    "closeconf" : {
-      "colse" : 2
+      "colse" : 2,
+      "tip" : false
    },
    "darkcoin" : {
       "SendBuyerCancelnFee" : 43571,
@@ -8,9 +9,35 @@
       "SendBuyernFee" : 33670,
       "SendSellernFee" : 38606
    },
+   "listapp" : [
+      {
+         "appid" : "223-1",
+         "name" : "223-1 ≤¬ƒ„√√V1",
+         "nameen" : "223-1 Guess who V1"
+      },
+      {
+         "appid" : "29283-1",
+         "name" : "29283-1 ≤¬ƒ„√√V2",
+         "nameen" : "29283-1 Guess who V2"
+      },
+      {
+         "appid" : "298-1",
+         "name" : "298 «¿∫Ï∞¸V1",
+         "nameen" : "298 Gifts V1"
+      },
+      {
+         "appid" : "29282-1",
+         "name" : "29282-1 «¿∫Ï∞¸V2",
+         "nameen" : "29282-1 Gifts V2"
+      },
+      {
+         "appid" : "50725-1",
+         "name" : "50725-1 IPO¡Ï±“V1",
+         "nameen" : "50725-1 IPO shares V1"
+      }
+   ],
    "logcfg" : {
       "log_flag" : 1,
-      "max_size" : 100,
       "print_fileline" : 1,
       "print_timestamps" : 1,
       "tags" : [
