1.需要改猜你妹的升级,以及一些bug
Signed-off-by: bess <776536184@qq.com>

Former-commit-id: ee37bb9dd72febaf47f301866aca28d4262a2147

--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -56,7 +56,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <OutputFile>..\bin\DacrsUI.exe</OutputFile>
+      <OutputFile>D:\dacrstest\test1\DacrsUI.exe</OutputFile>
       <AdditionalLibraryDirectories>..\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>
       </AdditionalDependencies>
@@ -318,6 +318,7 @@
     <ClInclude Include="AutoComplete.h" />
     <ClInclude Include="BalloonTip.h" />
     <ClInclude Include="BetInformation.h" />
+    <ClInclude Include="BetPoolListBox.h" />
     <ClInclude Include="BetRecord.h" />
     <ClInclude Include="BmpBtn.h" />
     <ClInclude Include="BtnST.h" />
@@ -425,6 +426,7 @@
     <ClCompile Include="AutoComplete.cpp" />
     <ClCompile Include="BalloonTip.cpp" />
     <ClCompile Include="BetInformation.cpp" />
+    <ClCompile Include="BetPoolListBox.cpp" />
     <ClCompile Include="BetRecord.cpp" />
     <ClCompile Include="BmpBtn.cpp" />
     <ClCompile Include="BtnST.cpp" />
