--- a/bin/config/Language_EN.ini
+++ b/bin/config/Language_EN.ini
@@ -243,6 +243,7 @@ P2P_LOTTERY_FAILURE=Lottery is failed
 P2P_BET_NO_LOTTERY=Part of the bet contract not announced, deposit first please.
 P2P_BET_CANCEL_ORDER=Cancel All order
 P2P_BET_UPDATA=Guess your younger sister has been upgraded, please go to the menu bar, select the restore default Settings
+P2P_SET_ACCEPTAMOUNT=Set the amount of orders
 
 [MORTTARD_MODULE] ;µÖÑºÄ£¿é  mortgage module
 MORTTARD_GENERAL_ENVELOPE=Common
@@ -436,7 +437,7 @@ PASS_MODIYWORD_STATICCOMFIRED=Confirm new password:
 [DACRSU]
 DACRSU_FILEPATH=Program can not be in the directory containing Spaces
 DACRSU_PROJECTRUN=The program is already running
-DACRSU_CLOSTIP=Guess your younger sister don't answer some single also bet or lottery, closed system has not the lottery pick on timeout\r\nAutomatically lose, whether to shut down
+DACRSU_CLOSTIP=Guess your younger sister don't answer some single also bet or lottery, closed system has not the lottery pick on timeout,Automatically lose, whether to shut down
 DACRSU_PATHNOTNULL=The path cannot be empty
 DACRSU_INSTEAD=If the file already exists to cover
 DACRSU_BACK=The wallet backup success
