--- a/bin/config/Language_CN.ini
+++ b/bin/config/Language_CN.ini
@@ -241,6 +241,8 @@ P2P_LOTTERY_FAILURE=开奖失败
 P2P_BET_NO_LOTTERY=有些竞猜未开奖,请先充值
 P2P_BET_CANCEL_ORDER=一键取消订单
 P2P_BET_UPDATA=猜你妹已经升级,请到菜单栏中选择恢复默认设置
+P2P_SET_ACCEPTAMOUNT=设置接单金额
+
 [MORTTARD_MODULE] ;抵押模块
 MORTTARD_GENERAL_ENVELOPE=普通红包
 MORTTARD_RED_ENVELOPE=接龙红包
