1.修改重载菜单栏中有关于属性checked 加载图片来代替自己画勾
Signed-off-by: bess <776536184@qq.com>

Former-commit-id: 5ec318fbc43f8a578f9040de4399fe3717719752

--- a/DacrsUI/DacrsUI.vcxproj.filters
+++ b/DacrsUI/DacrsUI.vcxproj.filters
@@ -1197,6 +1197,9 @@
     <None Include="res\p2p_red_packeten.bmp">
       <Filter>资源文件</Filter>
     </None>
+    <None Include="res\nemu.bmp">
+      <Filter>资源文件</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="资源文件">
