1.修改中文有的一些翻译
Signed-off-by: bess <776536184@qq.com>

Former-commit-id: 273ee8c6d8b65e54d1d5bbe83e63a3f8663e4c1b

--- a/bin/config/Language_EN.ini
+++ b/bin/config/Language_EN.ini
@@ -24,8 +24,8 @@ COMM_MINING=Mining
 COMM_ACTIVATEDS=Activate
 COMM_INPUT_ERROR=Error, please enter a digit
 COMM_HELP=Help
-COMM_BROTHER=Brother
-COMM_SISTER=Sister
+COMM_BROTHER=Boy
+COMM_SISTER=Girl
 COMM_NO_LOTTERY=Not announced
 COMM_TIMEOUT=Timeout    
 COMM_OPERATION=Operation
@@ -128,7 +128,7 @@ TRAD_TRAN_HAIR=Transaction <sent>
 TRAD_TRAN=Transaction  
 TRAD_REGISTER=Register
 TRAD_NOT_RECORD_OUT=No records can be exported
-TRAD_RECORD=Trading record
+TRAD_RECORD=Tradingrecord
 TRAD_NOT_OFFICE=Perhaps you have not installed office, which leads to a failure of creation 
 TRAD_BEGIN_PAGE=The first page already! 
 TRAD_END_PAGE=The final page already!
@@ -145,7 +145,7 @@ TRAD_ORDERS=Take order
 TRAD_QUIZ_CONTENT=content of the QUIZ
 TRAD_SEND_QUIZ=Launch a quiz
 TRAD_RECHARGE=Deposit
-TRAD_WITHDRAWALS=Withdrawal
+TRAD_WITHDRAWALS=Withdraw
 TRAD_WITHDRAWALS_MONEY=Amount of the withdrawal
 TRAD_GRAB_REDENVELOPE=Grab gift
 TRAD_GRAB_PT_REDENVELOPE=Grab a common gift
@@ -181,7 +181,7 @@ TRAD_ITEM=Strip
 
 [P2P_MODULE]   ;p2pÄ£¿é P2P module
 P2P_TOTAL=Total
-P2P_WITHDRAWALS=Withdrawal
+P2P_WITHDRAWALS=Withdraw
 P2P_WITHDRAWALS_MONEY=Amount of the withdrawal
 P2P_RECHARGE=Deposit
 P2P_REFRESH=Refresh
@@ -228,7 +228,7 @@ P2P_ORDER_NOT_BFCZZQX=Part of the orders can not be canceled, deposit and try it
 P2P_ORDER_OK=Congratulations! You  have canceled all orders.
 P2P_NO_RECORDS_EXPORT=There is no record can be exported.
 P2P_SINGLE_RECORD=Records of taking orders of Guess Who 
-P2P_SINGLE_SENDRECORD=Records of launching orders of Guess Who
+P2P_SINGLE_SENDRECORD=Send
 P2P_SINGLE_SEND_SASH=Quiz launching hash
 P2P_SINGLE_SASH=Taking orders hash
 P2P_PROMOTER=Sponsor
@@ -242,14 +242,14 @@ P2P_DATABASE_NO_RECORD=No record in the database.
 P2P_LOTTERY_FAILURE=Lottery is failed 
 P2P_BET_NO_LOTTERY=Part of the bet contract not announced, deposit first please.
 P2P_BET_CANCEL_ORDER=Cancel All order
-P2P_BET_UPDATA=Guess your younger sister has been upgraded, please go to the menu bar, select the restore default Settings
+P2P_BET_UPDATA=Guess your younger girl has been upgraded, please go to the menu bar, select the restore default Settings
 P2P_SET_ACCEPTAMOUNT=Set the amount of orders
 
 [MORTTARD_MODULE] ;µÖÑºÄ£¿é  mortgage module
 MORTTARD_GENERAL_ENVELOPE=Common
 MORTTARD_RED_ENVELOPE=Lucky
-MORTTARD_WITHDRAWALS=Withdrawal
-MORTTARD_WITHDRAWALS1=Withdrawal:
+MORTTARD_WITHDRAWALS=Withdraw
+MORTTARD_WITHDRAWALS1=Withdraw:
 MORTTARD_WITHDRAWALS_MONEY=Amount of withdrawal
 MORTTARD_WITHDRAWALS_FAIL=Failed to withdraw
 MORTTARD_RECHARGE=Deposit
@@ -311,10 +311,10 @@ MORTTARD_HAVEGRAB=The address has grabbed the red envelopes
 MORTTARD_NOTWIHTDRAW=Zero cannot withdrawal account amount
 
 [IPO_MODULE]   ;IPOÄ£¿é IPO module
-IPO_WITHDRAWALS=Withdrawal
-IPO_NUMBER=Number
+IPO_WITHDRAWALS=Withdraw
+IPO_NUMBER=No.
 IPO_MONEY=Amount
-IPO_THAW_HEIGHT=Thawing height
+IPO_THAW_HEIGHT=Unfreeze height
 IPO_WITHDRAWALS_OK=Are you sure of the withdrawal
 IPO_ADDRESS_NOT_NULL=Address can not be empty
 IPO_WALLET_ADDRESS_NOT=This address is not the wallet address,can not withdraw with it.
@@ -384,7 +384,7 @@ NEW_SENDADDR_ADDR_NULL=address can be empty
 
 
 [MENU]    ;²Ëµ¥À¸  Menu
-MENU_RPCCOMMAND=PRC Command
+MENU_RPCCOMMAND=RPC Command
 MENU_PASSWORD=Encrypt wallet 
 MENU_MODIFYPASSWORD=Change passphrase
 MENU_LOCK=Lock wallet
@@ -397,8 +397,8 @@ MENU_RESTORY=Restore default
 MENU_HISTORYRECORD=Export history records 
 MENU_SENDBET=Launching orders of Guess Who 
 MENU_ACCEPTET=Taken orders of Guess Who
-MENU_SENDRED=Gift sponsored
-MENU_GRABRED=Gift grabed
+MENU_SENDRED=sponsored
+MENU_GRABRED=grabed
 MENU_LANGUAGE=Language
 MENU_CNL=Simplified Chinese
 MENU_ENL=English
@@ -437,7 +437,7 @@ PASS_MODIYWORD_STATICCOMFIRED=Confirm new password:
 [DACRSU]
 DACRSU_FILEPATH=Program can not be in the directory containing Spaces
 DACRSU_PROJECTRUN=The program is already running
-DACRSU_CLOSTIP=Guess your younger sister don't answer some single also bet or lottery, closed system has not the lottery pick on timeout,Automatically lose, whether to shut down
+DACRSU_CLOSTIP=Guess your younger girl don't answer some single also bet or lottery, closed system has not the lottery pick on timeout,Automatically lose, whether to shut down
 DACRSU_PATHNOTNULL=The path cannot be empty
 DACRSU_INSTEAD=If the file already exists to cover
 DACRSU_BACK=The wallet backup success
